--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
+  <link href='https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css' rel='stylesheet' />
+
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
